--- a/src/components/navbar/navbarCss.css
+++ b/src/components/navbar/navbarCss.css
@@ -1,8 +1,17 @@
 .navbar-main{
-    max-width: 100vw;
     left: 0px;
     top: 0px;
     box-shadow: 0px 4px 6px 1px rgba(8, 8, 8, 0.2);
     z-index: 2;
+    height: 120px;
     color: var(--text01);
+}
+ .logo{
+ width: 85px;
+ }
+.titulo{
+    font-weight: bold;
+    color: var(--text01);
+    margin-left: 10px;
+    margin-top: 10px;
 }
