--- a/src/components/navbar/navbarCss.css
+++ b/src/components/navbar/navbarCss.css
@@ -5,6 +5,7 @@
     z-index: 2;
     height: 120px;
     color: var(--text01);
+    width: 100%;
 }
  .logo{
  width: 85px;
@@ -14,4 +15,16 @@
     color: var(--text01);
     margin-left: 10px;
     margin-top: 10px;
+}
+.contenedor{
+    display: flex;
+    align-items: center;
+    margin-left: 2rem;
+    
+}
+.contenedor-usuario{
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    margin-right: 5rem;
 }
