--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -2,13 +2,21 @@
     
     z-index: -4; 
     position: relative;
-    height: 100vh;
     width: 325px;
+    height: 680px;
     background-color: #F4F4F4;
 }
-.sidebar ul li{
-    list-style: none;
-    gap: 10px;
-    color: var(--text01);
-}
 
+.py-5{
+    padding-top: 5rem!important;
+    padding-bottom:5rem!important;
+}
+.py-4{
+    padding-top: 2rem!important;
+    padding-bottom:2rem!important;
+}
+.text-color{
+    gap: 5px;
+    color: var(--text01);
+    cursor: pointer;
+}
