--- a/src/pages/profesores/resultado-profesores/resultadoProfesores.scss
+++ b/src/pages/profesores/resultado-profesores/resultadoProfesores.scss
@@ -29,7 +29,16 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            
+            .popup{
+                .btn-1{
+                    color: #F4F4F4;
+                    background-color: #4057A9;
+                }
+                .btn-2{
+                    color: #4057A9;
+                    border: 2px solid #4057A9
+                }
+            }
             a{
                 align-self: flex-end;
             }
