--- a/src/pages/calendario/calendario.scss
+++ b/src/pages/calendario/calendario.scss
@@ -16,12 +16,10 @@
                
                 height: 330px;
                 display: flex;
-
+                justify-content: center;
                 .left,
                 .right{
-                    p{
-                        text-align:left;
-                    }
+                   
                     display: flex;
                     align-items: center;
                     justify-content: center;
